<resources>
    <string name="twitter_character_count">Twitter character count</string>
    <string name="characters_typed">Characters Typed</string>
    <string name="characters_remaining">Characters Remaining</string>
    <string name="hint_tweet">Start typing! You can enter up to 280 characters</string>
    <string name="copy_text">Copy Text</string>
    <string name="clear_text">Clear Text</string>
    <string name="post_tweet">Post tweet</string>
    <string name="image_description">image</string>
    <string name="_280">%s/280</string>
    <string name="post_tweet_successfuly">Your Post created Successfully and your tweet id is %1$s</string>
</resources>