<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handler"
            type="com.example.twitter.presentation.ui.TweetHandler" />

        <variable
            name="tweetButtonEnabled"
            type="Boolean" />

        <variable
            name="buttonEnabled"
            type="Boolean" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context="com.example.twitter.presentation.ui.TweetActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/_12sdp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/_12sdp" />

            <TextView
                android:id="@+id/titleHeaderTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/din_next_lt_arabic"
                android:gravity="center"
                android:text="@string/twitter_character_count"
                android:textColor="@color/color_toolbar"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toTopOf="@id/lineSperatorView"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/backImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_description"
                android:onClick="@{() -> handler.onBackButtonClicked()}"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="@id/titleHeaderTextView"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintTop_toTopOf="@id/titleHeaderTextView" />

            <View
                android:id="@+id/lineSperatorView"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/color_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleHeaderTextView" />

            <ImageView
                android:id="@+id/twitterLogoImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32sdp"
                android:contentDescription="@string/image_description"
                android:src="@drawable/ic_twitter_logo"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/lineSperatorView" />

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/twitterLogoImageView">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:background="@drawable/back_border_blue">

                    <TextView
                        android:id="@+id/textTyped"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/back_top_solid_blue"
                        android:fontFamily="@font/din_next_lt_arabic"
                        android:gravity="center"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/characters_typed"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textCountTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/din_next_lt_arabic"
                        android:gravity="center"
                        android:padding="@dimen/_16sdp"
                        android:text="@string/_280"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_20ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textTyped" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:background="@drawable/back_border_blue">

                    <TextView
                        android:id="@+id/textRemaining"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/back_top_solid_blue"
                        android:fontFamily="@font/din_next_lt_arabic"
                        android:gravity="center"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/characters_remaining"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textRemainingValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/din_next_lt_arabic"
                        android:gravity="center"
                        android:padding="@dimen/_16sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_20ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textRemaining"
                        tools:text="280" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/tweetInputEditText"
                android:layout_width="0dp"
                android:layout_height="@dimen/_180sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/back_border_blue"
                android:fontFamily="@font/din_next_lt_arabic"
                android:gravity="top"
                android:hint="@string/hint_tweet"
                android:inputType="textMultiLine"
                android:padding="@dimen/_9sdp"
                android:textColor="@color/color_text"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/container" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/copyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@{buttonEnabled ? @drawable/back_solid_green : @drawable/back_solid_gray}"
                android:enabled="@{buttonEnabled}"
                android:fontFamily="@font/din_next_lt_arabic"
                android:gravity="center"
                android:onClick="@{() -> handler.onCopyButtonClicked()}"
                android:padding="@dimen/_10sdp"
                android:text="@string/copy_text"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/tweetInputEditText" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@{buttonEnabled ? @drawable/back_solid_red : @drawable/back_solid_gray}"
                android:enabled="@{buttonEnabled}"
                android:fontFamily="@font/din_next_lt_arabic"
                android:gravity="center"
                android:onClick="@{() -> handler.onDeleteButtonClicked()}"
                android:padding="@dimen/_10sdp"
                android:text="@string/clear_text"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintTop_toBottomOf="@id/tweetInputEditText" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/postTweetButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@{tweetButtonEnabled ? @drawable/back_solid_dark_blue : @drawable/back_solid_gray}"
                android:enabled="@{tweetButtonEnabled}"
                android:fontFamily="@font/din_next_lt_arabic"
                android:gravity="center"
                android:onClick="@{() -> handler.onPostTweetButtonClicked()}"
                android:padding="@dimen/_10sdp"
                android:text="@string/post_tweet"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/deleteButton" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
